<resources>


    <string name="zam">点赞</string>
    <string name="comment">评论</string>
    <string name="password">密码</string>
    <string name="login_password">输入飞鸽登陆密码</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_confrim">确定</string>
    <string name="scan_addfrind">扫码可以直接加好友/群聊</string>
    <string name="text_cancel">撤销</string>
    <string name="text_copy">复制</string>
    <string name="text_delete">删除</string>

    <string name="pull_to_refresh">下拉刷新...</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_success">刷新成功</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="pop_menu_video_silent">静音播放</string>
    <string name="pop_menu_trans">转发</string>
    <string name="pop_menu_collect">收藏</string>
    <string name="pop_menu_photo">照片</string>
    <string name="pop_menu_video">视频</string>


</resources>
