<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:minWidth="230dp"
    android:layout_height="match_parent">
    <FrameLayout
        android:id="@+id/mMsgOptCancelContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/mMsgOptCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="14sp"
            android:textColor="@color/black_deep"
            android:text="@string/text_cancel"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="5dp"
            android:layout_gravity="bottom"
            android:layout_marginRight="5dp"
            android:background="@color/divider"/>
    </FrameLayout>

    <TextView
        android:id="@+id/mMsgOptCopy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="14sp"
        android:textColor="@color/black_deep"
        android:text="@string/text_copy"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/divider"/>
    <TextView
        android:id="@+id/mMsgOptDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="14sp"
        android:textColor="@color/black_deep"
        android:text="@string/text_delete"
        />
</LinearLayout>