<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="请输入密码"
        android:padding="8dp"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:background="@color/primary"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal"
        android:background="@drawable/identify_input">
        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="16sp"
            android:text="@string/password"/>
        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:background="@color/secondary_text"/>
        <EditText
            android:id="@+id/mPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginLeft="5dp"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:imeOptions="actionNext"
            android:hint="@string/login_password"
            android:background="@android:color/transparent"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="12dp"
        android:background="@color/black"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/mPwdCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="16dp"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/btn_cancel"
            android:gravity="center"/>
        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/black"/>
        <TextView
            android:id="@+id/mPwdConfrim"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:text="@string/btn_confrim"/>
    </LinearLayout>
</LinearLayout>